# decl-mercantile

./: .gitmodules  Dockerfile  README.md  entrypoint.sh
code/: pyproject.toml
code/resources/: fb_meta.fbs
code/skyhookdm-singlecell/: datatypes.py  util.py
code/skyhookdm_singlecell/: __init__.py  dataformats.py  datatypes.py  parsers.py  serialization.py  skyhook.py  util.py
code/toolbox/: arrow-less  convert-file-format  parquet-less  skyhook-less
cpp/: Makefile
python/: pyproject.toml  setup.py
python/resources/queries/by-cluster/by-gene/: gene_query_control.txt  gene_query_group_1.txt  gene_query_group_10.txt  gene_query_group_2.txt  gene_query_group_3.txt  gene_query_group_4.txt  gene_query_group_5.txt  gene_query_group_6.txt  gene_query_group_7.txt  gene_query_group_8.txt  gene_query_group_9.txt
python/resources/queries/by-cluster/by-name/: cluster_query.txt
python/resources/queries/cross-cluster/by-cell-gene/: combined_query.txt
python/resources/results.benchmark/: initial.txt  partition-sizes.simple.txt
python/scripts/: batch-compression.bash  batch-conversion.bash  load.fish  run-cost-queries.fish  run-queries.fish
python/single_cell/: datatypes.py  parsers.py
python/skyhookdm_singlecell/: connectors.py  dataformats.py  datatypes.py  parsers.py  singlecell.py  util.py
python/toolbox/: arrow-less  arrow-randomize  convert-file-format  query-benchmark  rados-write  run-query  skyhook-less
resources/data/: example.cells.tsv  example.genes.tsv  example.project.tsv
scripts/shell-utils/: run-ceph-container.fish
(+5 files in other folders)
