[tool.poetry]
name = "skyhookdm-singlecell"
version = "0.1.0"
description = ""
authors = ["Aldrin Montana <akmontan@ucsc.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17"
scipy = "^1.3"
h5py = "^2.10"
pyarrow = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
