[tool.poetry]
name = "skyhookdm_singlecell"
version = "0.1.0"
description = ""
authors = ["Aldrin Montana <akmontan@ucsc.edu>"]

[tool.poetry.dependencies]
python = "^3.6.9"
numpy = "^1.17"
scipy = "^1.3"
h5py = "^2.10"
pyarrow = "^0.17.0"
pandas = "^1.0.1"
awscli = "^1.17.15"
flatbuffers = "~1.11"
cython = "^0.29.15"
owlready2 = "^0.23"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
